# com/west2/docs/swagger.json
@@ -1,24 +1,41 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "West2-Golang-Demo03",
-        "title": "小黄老师备忘录",
-        "termsOfService": "https://github.com/SkyDDDog/demo03",
-        "contact": {
-            "name": "二火",
-            "url": "https://github.com/SkyDDDog",
-            "email": "lear_yd@qq.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "127.0.0.1:1234",
-    "basePath": "/api",
     "paths": {
         "/note": {
+            "get": {
+                "description": "查看所有事项",
+                "tags": [
+                    "NoteController"
+                ],
+                "summary": "查看事项",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "pageNum",
+                        "name": "pageNum",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "pageSize",
+                        "name": "pageSIze",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "添加一条待办事项",
                 "consumes": [
@@ -69,6 +86,37 @@
             }
         },
         "/note/done": {
+            "get": {
+                "description": "查看所有待办事项",
+                "tags": [
+                    "NoteController"
+                ],
+                "summary": "查看事项",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "pageNum",
+                        "name": "pageNum",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "pageSize",
+                        "name": "pageSIze",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "将 多条 代办事项设置为已完成",
                 "tags": [
@@ -90,6 +138,46 @@
                     "NoteController"
                 ],
                 "summary": "删除事项",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/note/done/{content}": {
+            "get": {
+                "description": "输入关键词查询事项",
+                "tags": [
+                    "NoteController"
+                ],
+                "summary": "查询事项",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "content",
+                        "name": "content",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "pageNum",
+                        "name": "pageNum",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "pageSize",
+                        "name": "pageSIze",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
